# Algorithms_Project_3c

./: .gitignore  CMakeLists.txt  README.md  main.cpp  Практические задания 2023.doc
RScripts/: CompareSorts.R
Simple/: Simple.hpp
data/: another.csv  another_radix.csv  big_str.csv  digit_bubble.csv  digit_fast.csv  digit_fast_rec.csv  digit_heap.csv  digit_inserter.csv  digit_merge.csv  digit_merge_rec.csv  digit_selection.csv  digit_standart.csv  hybryd_int.csv  int_fastR_rec.csv  int_hybryd.csv  radix_date.csv  radix_int.csv  small_str.csv  str_hybryd.csv
latex/: report.aux  report.tex  report.toc
src/: main  main.cpp
src/FastSort/: FastSort.hpp
src/HeapSort/: HeapSort.hpp
src/Mappers/: Mappers.hpp
src/MasterSort/: MasterSort.cpp  MasterSort.hpp
src/MergeSort/: MergeSort.hpp
src/RadixSort/: Radix.hpp
src/Shell/: Shell.hpp
src/Simple/: Simple.hpp
src/StandartSort/: StandartSort.hpp
